Closed Bug 1784688 Opened 3 years ago Closed 3 years ago

Wayland: Autocomplete dropdown and blue "Password saved" bubble are invisible

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- unaffected
firefox104 --- unaffected
firefox105 --- fixed

People

(Reporter: jan, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

Attached video 2022-08-13_15-58-29.mp4

Debian Testing, Gnome Wayland, Intel

mozregression --good 2022-08-01 --bad 2022-08-13 -a https://en.wikipedia.org/w/index.php?title=Special:CreateAccount

7:19.45 INFO: Last good revision: 279d1c18d42345a5a7c34845134690c7758deedf
7:19.45 INFO: First bad revision: 57347135903fecc341b3caf858569cc513b2e2e1
7:19.45 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=279d1c18d42345a5a7c34845134690c7758deedf&tochange=57347135903fecc341b3caf858569cc513b2e2e1

57347135903fecc341b3caf858569cc513b2e2e1 stransky — Bug 1777269 [Wayland] Always use GDK_WINDOW_TYPE_HINT_POPUP_MENU for popups r=emilio

last good:
mozregression --repo autoland --launch 279d1c18d42345a5a7c34845134690c7758deedf -a https://en.wikipedia.org/w/index.php?title=Special:CreateAccount

first bad:
mozregression --repo autoland --launch 57347135903fecc341b3caf858569cc513b2e2e1 -a https://en.wikipedia.org/w/index.php?title=Special:CreateAccount

Xwayland not affected:
MOZ_ENABLE_WAYLAND=0 mozregression --repo autoland --launch 57347135903fecc341b3caf858569cc513b2e2e1 -a https://en.wikipedia.org/w/index.php?title=Special:CreateAccount

Flags: needinfo?(stransky)

Correct regression is Bug 1782948.

Flags: needinfo?(stransky)
Regressed by: 1782948
No longer regressed by: 1777269
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/c7e183234d7d [Wayland] Don't destroy invisible popups on temporary hide r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

(In reply to Martin Stránský [:stransky] (ni? me) from comment #1)

Correct regression is Bug 1782948.

Gnome Wayland, Debian Testing, Intel

No, this bug is not fixed (autocomplete dropdown and blue password saved bubble are still invisible) and the regression range (last good+first bad) is correct.
Reconfirmed with latest m-c: mozregression --launch 7fd0b1b3fc981e3028c91df299ce29a2d834179e -a https://en.wikipedia.org/w/index.php?title=Special:CreateAccount

Status: RESOLVED → REOPENED
Regressed by: 1777269
No longer regressed by: 1782948
Resolution: FIXED → ---
Status: REOPENED → NEW
Flags: needinfo?(stransky)

Okay, will look at it.

See Also: → 1785185

Let's track that at Bug 1785185.

Flags: needinfo?(stransky)
Status: NEW → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED

Set release status flags based on info from the regressing bug 1777269

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: