Bug 1784688 [Wayland] Don't destroy invisible popups on temporary hide r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D154644